--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^6.0.0"
   },
   "dependencies": {
-    "lz-string": "^1.4.4"
   }
 }
